--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                        This is a footer tag 
         -------------------------------------------------------->
     <footer>
-
+        <h1>HLW</h1>
     </footer>    
 </body>
 </html>
